[package]
name = "popeta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
azalea = { git = "https://github.com/azalea-rs/azalea", version = "0.9.0" }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
